# topics

./: Cargo.toml  build.sh  out.json  readme.md
fixtures/: topics-01.yaml  topics-02.yaml
fixtures/cycle/: topics.yaml
fixtures/empty/: empty.yaml
fixtures/graph/: commands.yaml  deps.yaml  topics.yaml
fixtures/md/: commands.md  config.md  topics.md  topics_2.md
fixtures/toml/: commands.toml  config.toml  single.toml
fixtures2/: topics-02.yaml  topics.yaml  topics_error.yaml  topics_missing_fields.yaml  topics_multi_error.yaml  topics_single.yaml
multi_doc/: Cargo.toml
multi_doc/src/: lib.rs
multi_doc/src/snapshots/: multi_doc__test__empty_doc_preserve_src.snap  multi_doc__test__single_doc_with_prefix_padding.snap  multi_doc__test__single_doc_with_suffix_padding.snap
multi_yaml/: Cargo.toml
multi_yaml/src/: lib.rs
multi_yaml/src/snapshots/: multi_yaml__test__empty_doc_preserve_src.snap  multi_yaml__test__single_doc_with_prefix_padding.snap  multi_yaml__test__single_doc_with_suffix_padding.snap
src/: command.rs  context.rs  cwd.rs  db.rs  dependency.rs  doc.rs  file_exists.rs  instruction.rs  item.rs  main.rs  multi_step.rs  opt.rs  output.rs  print.rs  source.rs  step.rs  topic.rs
src/cli/: generate_cmd.rs  mod.rs  print_cmd.rs  sub_command.rs
src/doc_src/: doc_src.rs  doc_src_item.rs  mod.rs
src/host/: host.rs  mod.rs
src/items/: command.rs  dependency.rs  file_exists.rs  instruction.rs  item.rs  mod.rs  task_group.rs  topic.rs
src/print/: md.rs  mod.rs  plain.rs  print.rs
src/snapshots/: topics__doc__test__errors_multi.snap  topics__doc__test__errors_single.snap
toml/: Cargo.toml
toml/src/: lib.rs
topics/: Cargo.toml
topics/src/: db.rs  doc.rs  main.rs
topics/src/doc_src/: doc_src.rs  mod.rs
topics/src/doc_src/snapshots/: topics__doc_src__doc_src__test__fixture_file.snap
topics/src/items/: mod.rs
topics/src/print/: mod.rs
topics/src/print/plain/: mod.rs  plain.rs
topics/src/snapshots/: topics__doc__test__errors_multi.snap  topics__doc__test__errors_single.snap
topics_core/: Cargo.toml
topics_core/src/: bin.rs  context.rs  cwd.rs  db.rs  db_error.rs  doc.rs  doc_err.rs  html.rs  lib.rs  (+2 more)
web/: index.html  package-lock.json  package.json  tsconfig.json
(+49 files in other folders)
