[package]
name = "multi_doc"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
yaml-rust = "0.4.5"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
insta = "1.7.0"