[package]
name = "multi_yaml"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.17"
anyhow = "1.0.38"

[dev-dependencies]
insta = "1.7.0"