[package]
name = "topics"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

[dependencies]
topics_core = {path = "../topics_core", version = "0.1.0"}
env_logger = "0.8.3"
log = "0.4.14"
parser-combinators = "0.7.1"
pest = "2.1.3"
pest_derive = "2.1.0"
comrak = "0.10.0"
conch-parser = "0.1.1"